--- a/.project
+++ b/.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<projectDescription><<<<<< H 099a83f2d997170f47e0fab46ea5ed3f07e30689
+<projectDescription>
 	<comment></comment>
 	<projects>
 	</projects>
