--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,11 @@
       </plugins>
     </pluginManagement>
   </build>
+         
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.33</version> 
+</dependency>
 
 </project>
