--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+         <!-- conector mysql -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.33</version> 
+</dependency>
   <build>
     <finalName>educacaoinclusiva</finalName>
     <pluginManagement>
@@ -75,10 +80,6 @@
     </pluginManagement>
   </build>
          
-<dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.33</version> 
-</dependency>
+
 
 </project>
