--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,23 @@
-<<<<<<  <<<<<<  DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>s DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?>un Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?>Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?>/Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?>//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?>-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?>"-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?> "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > >" >d" >b-app>sion="1.0" encoding="UTF-8"?>eb-app
-    version="4.0"
-    xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-    xmlns:javaee="http://xmlns.jcp.org/xml/ns/javaee"
-    xmlns:xml="http://www.w3.org/XML/1998/namespace"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+                             http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+    
+    <display-name>educacao-inclusiva</display-name>
+
+    <!-- Exemplo de servlet, se necessário -->
+    <!--
+    <servlet>
+        <servlet-name>ExemploServlet</servlet-name>
+        <servlet-class>com.exemplo.ExemploServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ExemploServlet</servlet-name>
+        <url-pattern>/exemplo</url-pattern>
+    </servlet-mapping>
+    -->
+
+</web-app>
