--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,14 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.33</version> 
     </dependency>
-  </dependencies>
+
+    <!-- Dependência Gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+</dependencies>
 
   <build>
     <finalName>educacaoinclusiva</finalName>
@@ -81,5 +88,4 @@
       </plugins>
     </pluginManagement>
   </build>
-
 </project>
