--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ build/
 ### Arquivo de Configuração do Banco ###
 src/main/resources/dbconfig.properties
 /bin/
+src/main/resources /dbconfig.properties
