--- a/src/main/resources /dbconfig.properties
+++ b/src/main/resources /dbconfig.properties
@@ -1,3 +1,3 @@
-db.username="tainara"
-db.password="THAI@maral5"
+db.username="Maira Ramos"
+db.password="Maira@21"
 db.url="jdbc:mysql://localhost:3306/Capacita"
