--- a/src/main/resources /dbconfig.properties
+++ b/src/main/resources /dbconfig.properties
@@ -1,3 +1,4 @@
-db.username=
-db.password=
+db.username="tainara"
+db.password="THAI@maral5"
 db.url="jdbc:mysql://localhost:3306/Capacita"
+db.driver="com.mysql.cj.jdbc.Driver"
