--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
-    
-    <display-name>educacao-inclusiva</display-name>
-
-    <!-- Exemplo de servlet, se necessário -->
-    <!--
-    <servlet>
-        <servlet-name>ExemploServlet</servlet-name>
-        <servlet-class>com.exemplo.ExemploServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>ExemploServlet</servlet-name>
-        <url-pattern>/exemplo</url-pattern>
-    </servlet-mapping>
-    -->
-
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
+  <display-name>Educação inclusiva </display-name>
+  <welcome-file-list>
+    <welcome-file>home</welcome-file>
+</welcome-file-list>
 </web-app>
