--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
                              https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
-  <display-name>Estagio Inclusivo</display-name>
+  <display-name>educação inclusiva</display-name>
   <welcome-file-list>
     <welcome-file>home</welcome-file>
 </welcome-file-list>
