--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,10 @@
 			<version>2.8.8</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+			<version>3.0.1</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
